<resources>
    <string name="app_name">My Application</string>
    <string name="backup">Backup</string>
    <string name="delete">Delete</string>
    <string name="settings">Settings</string>
    <string name="this_is_a_menu">This is a menu</string>
    <string name="call">Call</string>
    <string name="friends">Friends</string>
    <string name="location">Location</string>
    <string name="mail">Mail</string>
    <string name="tasks">Tasks</string>
    <string name="tonygreendev_gmail_com">tonygreendev@gmail.com</string>
    <string name="tony_green">Tony Green</string>
    <string name="todo">TODO</string>
    <string name="title_activity_database">DatabaseActivity</string>
    <string name="databasecheck">Databasecheck</string>
    <string name="hello_world">Hello world</string>
    <string name="jiemian">界面</string>
    <string name="calcu">计算</string>
    <string name="tuige">退格</string>
    <string name="findhistory">查看历史记录</string>
    <string name="cleareverything">清空</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_0">0</string>
    <string name="dotdotdot">.</string>
    <string name="add">+</string>
    <string name="back">Back</string>
    <string name="substrat">-</string>
    <string name="multiply">*</string>
    <string name="div">/</string>
    <string name="zuokuohao">(</string>
    <string name="youkuohao">)</string>
    <string name="back222">BACK</string>
</resources>
